--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "python.pythonPath": "C:\\Users\\Jack\\anaconda3\\envs\\Jack\\python.exe",
-    "python.linting.pylintArgs": ["--generate-members"]
+    "python.linting.pylintArgs": [
+        "--generate-members"
+    ],
+    "editor.formatOnSave": true,
 }
